# edge-proc

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  security-audit.yml
benchmarks/: benchmark.py  northstar.py
docs/: ARCHITECTURE.md  OPERATIONS.md  QUICKSTART.md
docs/diagrams/: bundle-lifecycle.d2  cas-and-manifest.d2  system-context.d2
docs/superpowers/specs/: 2026-05-27-phase-a-sync-substrate-design.md  2026-05-27-phase-c-browser-tier-design.md
edgeproc/: __init__.py  _version.py  errors.py
edgeproc/bundles/: adapters.py  cas.py  chunking.py  containment.py  manifest.py  publish.py  signing.py  sync.py
edgeproc/cli/: __init__.py  app.py
edgeproc/core/: facade.py  memory.py  models.py  protocols.py  registry.py  router.py  settings.py  telemetry.py
edgeproc/localvec/: encoder.py  faiss_index.py  fusion.py  loader.py  runtime.py  searcher.py
examples/: README.md  catalog.json  quickstart.py  run_loop.sh
examples/catalog_idx/: index.faiss  state.json
tests/: test_errors.py  test_integration.py  test_northstar_docs.py  test_public_surface.py  test_release_contract_docs.py  test_workflow_security.py
tests/bundles/: _producer.py  test_adapters.py  test_cas.py  test_chunking.py  test_concurrency.py  test_containment.py  test_manifest.py  test_manifest_v2.py  test_pointer_hardening.py  test_publish.py  test_signing.py  test_sync.py  test_sync_caps.py  test_sync_index.py  test_sync_integration.py
tests/cli/: test_cli.py
tests/core/: test_facade.py  test_memory.py  test_models.py  test_protocols.py  test_registry.py  test_router.py  test_settings.py  test_telemetry.py
tests/localvec/: _fakes.py  test_encoder.py  test_faiss_index.py  test_fusion.py  test_loader.py  test_runtime.py  test_searcher.py
