[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edge-proc"
dynamic = ["version"]
description = "AI-native local execution substrate: a pure deterministic router over pluggable runtimes, a FAISS vector runtime, and a signed bundle/sync substrate. The foundational local-execution Lego."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Harish Seshadri", email = "harish.seshadri@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.26.8",
    "shared-libs-python>=0.2.0",  # >=0.2.0 ships shared_libs_python.errors (canonical errors)
]

[project.optional-dependencies]
localvec = [
    "faiss-cpu>=1.14.3",
    "sentence-transformers>=5.6.0",
    "rank-bm25>=0.2",
    "numpy>=2.5.1",
]
bundles = [
    "httpx>=0.27",
    "structlog>=26.1.0",
    "cryptography>=44",
    "filelock>=3.20",
    "zstandard>=0.25",
    "packaging>=24",  # PEP 440 version comparison for anti-rollback (sync monotonicity)
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=2.2.0",
    "ruff>=0.15.21",
    "xenon>=0.9",
    "radon>=6.0",
    "poethepoet>=0.48.0",
]

[project.scripts]
edgeproc = "edgeproc.cli:app"

[project.urls]
Homepage = "https://github.com/hseshadr/edge-proc"
Repository = "https://github.com/hseshadr/edge-proc"
Issues = "https://github.com/hseshadr/edge-proc/issues"

[tool.uv.sources]
# Open-source onboarding: clone ONLY this repo and `uv sync` — shared-libs-python
# is pulled from public GitHub (it is not on PyPI). Pinned to the v0.2.0 release
# tag, which ships the canonical-errors module (shared_libs_python.errors); an
# immutable tag keeps external clones + CI reproducible.
shared-libs-python = { git = "https://github.com/hseshadr/shared-libs-python.git", tag = "v0.2.0" }

# Co-developing shared-libs-python locally? Clone it next to this repo and swap the
# line above for a path source (uncomment):
#   shared-libs-python = { path = "../shared-libs-python", editable = true }

# The version is single-sourced from edgeproc/_version.py — hatchling reads it at
# build time, so installed metadata and edgeproc.__version__ can never drift.
[tool.hatch.version]
path = "edgeproc/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["edgeproc"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv", ".deps"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C901", "B", "UP", "SIM", "N", "RUF", "ASYNC", "S", "PL", "A", "PT"]
ignore = ["S101", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "C901", "PLR0911", "PLR0912"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["faiss", "rank_bm25", "sentence_transformers"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=edgeproc",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "-v",
]

[tool.coverage.run]
source = ["edgeproc"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "\\.\\.\\.",
]
fail_under = 90.0

[tool.poe.tasks]
lint = "ruff check edgeproc/ tests/"
fmt-check = "ruff format --check edgeproc/ tests/"
fmt = "ruff format edgeproc/ tests/"
complexity = "xenon --max-absolute A --max-modules A --max-average A edgeproc/"
test = "pytest"
# `gate` mirrors CI exactly (lint + format-check + typecheck + complexity + test).
gate = ["lint", "fmt-check", "typecheck", "complexity", "test"]

# shared-libs-python now installs from a git source (or a plain path override) into
# site-packages, so it's on the normal import path and mypy resolves it directly —
# no MYPYPATH needed. (mypy refuses a MYPYPATH that points into site-packages, which
# is exactly what the old __file__-derived dance produced under a non-editable install.)
[tool.poe.tasks.typecheck]
cmd = "mypy --strict edgeproc/"
